2010-03-19  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* examples/module-Not-ic-Stratified.hex: Modified to not-i-stratified.

	* include/dlvhex/MLPSolver.hpp: Modified the solver to solve an i-stratified program.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Impose an exception for a duplicate module name.

	* testsuite/TestMLPSolver.cpp: Adding a test case for C contains more than one element when enter comp().
	* examples/module-Cs.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Updating the answer set counter printing.

2010-03-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: Adding a test case to add (and retrieve) fin from A.
	* examples/module-AFin.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in setting fin to A and print useful information into a log file.

2010-03-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixing bug in smallest ILL.
	* include/dlvhex/Logger.hpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding a test case for indirect rule to collect the bottom.
	* examples/module-Indirection.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting bottom.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Allowing empty predicate inputs.

2010-03-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/Logger.hpp: Fixed some logging information
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Add tower of hanoi examples.
	* examples/module-Hanoi.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Producing call graph.

	* testsuite/TestHexParserModule.cpp: Completing the test cases with throw requirement.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting Answer Set.

2010-03-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Logger.hpp: Introducing MLPSolver state into dlvhex.